# thai-lottery-lab

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  prisma.config.ts  proxy.ts  vitest.config.ts
app/[lang]/: layout.tsx  page.tsx
app/[lang]/backtest/: page.tsx
app/[lang]/import/: page.tsx
app/[lang]/stats/: page.tsx
app/api/backtest/run/: route.ts
app/api/export/db/: route.test.ts  route.ts
app/api/health/: route.ts
app/api/imports/: route.ts
app/api/stats/: route.ts
app/api/stats/gap/: route.ts
app/api/stats/rolling/: route.ts
components/: BacktestLab.test.tsx  BacktestLab.tsx  HealthBadge.tsx  ImportForm.test.tsx  ImportForm.tsx  LangSwitcher.tsx  NumberAnalysis.tsx  StatsView.tsx
data/seed/: glo_results_seed.csv
docs/: PROJECT_HANDOFF.md  csv_schema.md
lib/: i18n.ts  prisma.ts
lib/import/: import.ts  validate.test.ts  validate.ts
messages/: en.json  th.json
prisma/: schema.prisma
prisma/migrations/20260505063539_init/: migration.sql
worker/: pyproject.toml
worker/app/: main.py
worker/app/backtest/: engine.py  leakage_guard.py  router.py
worker/app/backtest/strategies/: __init__.py  cold_n.py  common.py  gap_weighted.py  hot_n.py  random_baseline.py
worker/app/stats/: compute.py  router.py
worker/tests/: test_backtest.py  test_health.py  test_leakage_guard.py
